# rnd-jg-test2

./: CMakeLists.txt  README.md
cmake/: add-harvest-project.cmake  project-properties.cmake  rnd-jg-test2Config.cmake.template
install/lib/cmake/proj1/: proj1-debug.cmake  proj1.cmake
project/: CMakeLists.txt
project/include/interface/: AnimalInterface.hpp  Dog.hpp  Proj1Interface.hpp  Turtle.hpp
project/include/internal/: Proj1InternalHidden.hpp
project/src/libanimal/: CMakeLists.txt  Dog.cpp  Turtle.cpp
project/src/libproj1/: CMakeLists.txt  Proj1Interface.cpp  Proj1InternalHidden.cpp
test/: AnimalInterface.test.cpp  CMakeLists.txt  Proj1Interface.test.cpp
